contact and faq section smal remake, subscribe dark mode color fix

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -28,8 +28,8 @@ $extra-bold: 800;
 
 
 // colors
-$darkmode-bg: #D9D9D9;
-$main-color: #6366F1;
+
+$main-color: #5e60f5;
 $gradient-color: #efe4f4;
 $font-color:#585C7B;
 $text-color-gray: #585C7B;
